Fix broken landing page image on Safari (#4210)

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -2486,7 +2486,6 @@ h3.body-header[style] {
   margin-top: 3rem;
   min-width: 500px;
   max-width: 500px;
-  height: fit-content;
   margin-top: 9rem;
 }
 
